2008-08-28  Mirco Bauer <meebey@meebey.net> 

	* FastSerializer.cs: Set eol-style to native and converted files using
	  dos2unix where needed.

2008-08-25  Mirco Bauer <meebey@meebey.net> 

	

2008-08-24  Mirco Bauer <meebey@meebey.net> 

	* Defines.cs, Common.mdp: Provide Defines.
	* LibraryCatalog.cs: Catalog (gettext) wrapper that allows multiple
	  text-domains.

2008-08-21  Mirco Bauer <meebey@meebey.net> 

	* ITraceable.cs, Trace.cs: Fixed whitespace (replaced \t with 4 spaces).

2008-07-27  Mirco Bauer <meebey@meebey.net> 

	* AssemblyInfo.cs, AssemblyInfo.cs.in: Removed AssemblyInfo.cs.in files, not
	  needed anymore as we use a shared AssemblyVersion.cs(.in) now.

2008-07-27  Mirco Bauer <meebey@meebey.net> 

	* Common.mdp: Removed assembly attributes that are now part of the shared
	  AssemblyVersion.cs file.

2008-07-17  Mirco Bauer <meebey@meebey.net> 

	* AssemblyInfo.cs: Bumped version to 0.6.0.

2008-07-17  Mirco Bauer <meebey@meebey.net> 

	* MD5.cs: Fixed whitespace.

2008-04-01  Mirco Bauer <meebey@meebey.net> 

	* AssemblyInfo.cs: Bumped version to 0.5.31

2008-01-31  Mirco Bauer <meebey@meebey.net> 

	* AssemblyInfo.cs: Bumped version to 0.5.30.

2007-12-25  Mirco Bauer <meebey@meebey.net> 

	* Common.mdp: Updated using MonoDevelop 0.18.1
