@@ -22,6 +22,7 @@
     <File name="../AssemblyVersion.cs" subtype="Code" buildaction="Compile" />
     <File name="LibraryCatalog.cs" subtype="Code" buildaction="Compile" />
     <File name="Defines.cs" subtype="Code" buildaction="Compile" />
+    <File name="TaskQueue.cs" subtype="Code" buildaction="Compile" />
   </Contents>
   <References>
     <ProjectReference type="Assembly" localcopy="True" refto="../../lib/log4net.dll" />
